<resources>

    <string name="app_name">Unify</string>
    <string name="status_item">Status</string>
    <string name="question_item">Question</string>
    <string name="survey_item">Survey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="text_unify">Unify</string>
    <string name="text_lets_start">Let\'s Get Started</string>
    <string name="text_intro">Easiest Way To Interact With Your Lecturer</string>
    <string name="text_button_join_session">Join Session</string>
    <string name="text_button_scan_qr_code">Scan QR Code</string>
    <string name="text_scan_result">Scan Results Appear Here</string>
    <string name="scan_success">Scan Successful!</string>
    <string name="text_button_working">I Am Working!</string>
    <string name="text_button_help">I Need Some Help!</string>
    <string name="text_button_done">I Am Done!</string>
    <string name="text_status_description">Change Your Status To Reflect Where You Are With Your Workload</string>
    <string name="text_question_description">If You Have Any Questions, Ask Them Here.</string>
    <string name="text_button_question_send">Send Question</string>
    <string name="text_hint_question_input">Your Question:</string>
    <string name="status_fragment_header" translatable="false">Status Check</string>
    <string name="question_fragment_header" translatable="false">Quick Question</string>
    <string name="fragment_survey_header">No survey at the moment</string>
    <string name="fragment_survey_submit_button">Submit</string>

</resources>