<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_darkblue"
    tools:context=".Fragment_status">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_status_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/helvetica_neue_black"
            android:text="Status Check"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fragment_status_button_working"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="50dp"
            android:text="@string/text_button_working"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_status_header" />

        <Button
            android:id="@+id/fragment_status_button_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/text_button_help"
            app:layout_constraintEnd_toEndOf="@+id/fragment_status_button_working"
            app:layout_constraintStart_toStartOf="@+id/fragment_status_button_working"
            app:layout_constraintTop_toBottomOf="@+id/fragment_status_button_working" />

        <Button
            android:id="@+id/fragment_status_button_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/text_button_done"
            app:layout_constraintEnd_toEndOf="@+id/fragment_status_button_help"
            app:layout_constraintStart_toStartOf="@+id/fragment_status_button_help"
            app:layout_constraintTop_toBottomOf="@+id/fragment_status_button_help" />

        <TextView
            android:id="@+id/fragment_status_description"
            android:layout_width="360dp"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/text_status_description"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fragment_status_header"
            app:layout_constraintTop_toBottomOf="@+id/fragment_status_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>