<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fra"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_darkblue"
    tools:context=".Fragment_question">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_question_button_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginBottom="105dp"
            android:background="@drawable/join_session_button"
            android:fontFamily="@font/inter_semi_bold"
            android:letterSpacing="0.05"
            android:text="@string/text_button_question_send"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragment_question_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/helvetica_neue_black"
            android:text="@string/question_fragment_header"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_question_description"
            app:layout_constraintStart_toStartOf="@+id/fragment_question_description" />

        <TextView
            android:id="@+id/fragment_question_description"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/text_status_description"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/fragment_question_text_input"
            app:layout_constraintStart_toStartOf="@+id/fragment_question_text_input"
            tools:layout_editor_absoluteY="107dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_question_text_input"
            android:layout_width="319dp"
            android:layout_height="62dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_question_button_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_question_description"
            app:layout_constraintVertical_bias="0.04000002">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>